# micromanager1.3

./: Makefile.am  build_instructions_debian.txt  configure.common  configure.in  debiancontrol.ij  debiancontrol.port  mkdebian.sh  mmUnixBuild.sh  mmbuild-java.bat  mmbuild.bat
DeviceAdapters/: Makefile.am  configure.in
DeviceAdapters/ABS/: ABS.vcproj  ABSCamera.cpp  ABSCamera.h
DeviceAdapters/AOTF/: AOTF.cpp  AOTF.vcproj
DeviceAdapters/ASIFW1000/: ASIFW1000.cpp  ASIFW1000.h  ASIFW1000.vcproj  Makefile.am
DeviceAdapters/ASIStage/: ASIStage.cpp  ASIStage.h  ASIStage.vcproj  Makefile.am
DeviceAdapters/ASIWPTR/: Makefile.am  wptr.vcproj
DeviceAdapters/Andor/: Andor.cpp  Andor.h  Andor.vcproj
DeviceAdapters/Andor/Andor2_84/: Andor.cpp  Andor.h  Andor2_84.vcproj  DeviceBase.h
DeviceAdapters/Arduino/: AOTFcontroller.pde  Arduino.cpp  Arduino.h  Arduino.vcproj  Makefile.am
DeviceAdapters/Conix/: Conix.cpp  Conix.vcproj  Makefile.am
DeviceAdapters/DAShutter/: DAShutter.cpp
DeviceAdapters/DAZStage/: DAZStage.cpp
DeviceAdapters/DTOpenLayer/: DTOpenLayer.cpp  DTOpenLayer.vcproj
DeviceAdapters/DemoCamera/: DemoCamera.cpp  DemoCamera.h  DemoCamera.vcproj  Makefile.am
DeviceAdapters/DemoRGBCamera/: DemoRGBCamera.cpp  DemoRGBCamera.h  Makefile.am
DeviceAdapters/DemoStreamingCamera/: DemoStreamingCamera.cpp  DemoStreamingCamera.h  DemoStreamingCamera.vcproj  Makefile.am
DeviceAdapters/Hamamatsu/: Hamamatsu.cpp  Hamamatsu.h  Hamamatsu.vcproj  Makefile.am
DeviceAdapters/K8055/: K8055.cpp  K8055.vcproj  K8055Interface.cpp  Makefile.am
DeviceAdapters/K8061/: K8061.cpp  K8061.vcproj  Makefile.am
DeviceAdapters/LeicaDMI/: LeicaDMI.cpp  LeicaDMI.h  LeicaDMI.vcproj  LeicaDMICodes.h  LeicaDMIModel.cpp  LeicaDMIModel.h  LeicaDMIScopeInterface.cpp  LeicaDMIScopeInterface.h  Makefile.am
DeviceAdapters/Ludl/: Ludl.cpp  Ludl.vcproj  Makefile.am
DeviceAdapters/LudlLow/: Ludl.cpp  Makefile.am
DeviceAdapters/MCL_MicroDrive/: MCL_MicroDrive.cpp  MicroDrive.h  MicroDrive.lib  MicroDriveXYStage.cpp  MicroDriveXYStage.h  Microdrive_Device_Adapter.vcproj
DeviceAdapters/MCL_NanoDrive/: MCL_NanoDrive.cpp  MCL_NanoDrive_XYStage.cpp  MCL_NanoDrive_XYStage.h  NanoDrive_Device_Adapter.vcproj
DeviceAdapters/MultiShutter/: MultiShutter.cpp
DeviceAdapters/NIDAQ/: Makefile.am  NIDAQ.cpp  NIDAQ.h
DeviceAdapters/NiMotionStageController/: NIMotionControl.h  NiMotionControl.vcproj
DeviceAdapters/Nikon/: Makefile.am  Nikon.cpp  Nikon.vcproj
DeviceAdapters/NikonTE2000/: Makefile.am  NikonTE2000.cpp  NikonTE2000.h  NikonTE2000.vcproj  TEHub.cpp  TEHub.h
DeviceAdapters/PCO_Generic/: MicroManager.cpp  MicroManager.h  MicroManager.sln  MicroManager.vcproj  readme.txt
DeviceAdapters/PI/: Makefile.am  PI.cpp  PI.vcproj
DeviceAdapters/PI_GCS/: Makefile.am  PI_GCS.cpp  PI_GCS.vcproj
DeviceAdapters/PVCAM/: Makefile.am  PVCAM.cpp  PVCAM.h  PVCAM.vcproj  PVCAMUniversal.cpp
DeviceAdapters/PVCAMPI/: PVCAMPI.cpp
DeviceAdapters/ParallelPort/: ParallelPort.cpp  ParallelPort.vcproj
DeviceAdapters/Pecon/: Makefile.am  Pecon.cpp  Pecon.vcproj
DeviceAdapters/Piper/: CameraAdapter.cpp  CameraAdapter.h  PiperMmAdapter.rc  PiperMmAdapter.vcproj
DeviceAdapters/PrecisExcite/: Makefile.am  PrecisExcite.cpp  PrecisExcite.h
DeviceAdapters/Prior/: Makefile.am  Prior.cpp  Prior.vcproj
DeviceAdapters/QCam/: Makefile.am  QCam.vcproj  QICamera.cpp  QICamera.h
DeviceAdapters/Sensicam/: Sensicam.cpp  Sensicam.h  Sensicam.vcproj
DeviceAdapters/SerialManager/: Serial.cpp  SerialManager.cpp  SerialManager.h  SerialManager.vcproj
DeviceAdapters/SerialManagerUNIX/: Makefile.am  SerialManager.cpp  SerialPort.cpp
DeviceAdapters/SimpleAF/: SimpleAF.cpp  SimpleAF.h  SimpleAF.vcproj  SimpleAFImageUtils.cpp  SimpleAFImageUtils.h
DeviceAdapters/Skeleton/: Skeleton.cpp
DeviceAdapters/SpectralLMM5/: Makefile.am  SpectralLMM5.cpp  SpectralLMM5.h  SpectralLMM5.vcproj
DeviceAdapters/StanfordPhotonics/: StanfordPhotonics.cpp
DeviceAdapters/SutterLambda/: Makefile.am  SutterLambda.cpp  SutterLambda.h  SutterLambda.vcproj
DeviceAdapters/ThorlabFilterWheel/: Makefile.am  ThorlabsFilterWheel.vcproj
DeviceAdapters/ThorlabsFilterWheel/: FilterWheel.cpp  FilterWheel.h  Makefile.am  ThorlabsFilterWheel.vcproj
DeviceAdapters/USBManager/: Makefile.am  USBManager.cpp  USBManager.h  USBManager.vcproj
DeviceAdapters/Utilities/: Makefile.am  Utilities.cpp  Utilities.h  Utilities.vcproj
DeviceAdapters/Vincent/: Makefile.am  Vincent.cpp  Vincent.vcproj
DeviceAdapters/Yokogawa/: CSU22.cpp  CSUX.cpp  Makefile.am  Yokogawa.vcproj
DeviceAdapters/Yokogawa/CSUX/: CSUX.vcproj
DeviceAdapters/ZeissCAN/: Makefile.am  ZeissCAN.cpp  ZeissCAN.vcproj
DeviceAdapters/ZeissCAN29/: Makefile.am  ZeissCAN29.cpp  ZeissCAN29.h  ZeissCAN29.vcproj
DeviceAdapters/dc1394/: Makefile.am  dc1394.cpp  dc1394.h
DeviceAdapters/pco-generic/: MicroManager.cpp  MicroManager.h  MicroManager.vcproj  empty.txt
Install/: MM-ImageJ-Install.iss  MMDeviceKit.iss
MMCore/: CircularBuffer.cpp  CircularBuffer.h  CoreCallback.cpp  CoreCallback.h  CoreUtils.h  ErrorCodes.h  IMMLogger.h  MMACELogger.cpp  MMACELogger.h  MMCore.cpp  MMCore.h  MMCore.vcproj  Makefile.am  PluginManager.cpp  PluginManager.h
MMCoreJ_wrap/: MMCoreJ.i  MMCoreJ_wrap.sln  MMCoreJ_wrap.vcproj  Makefile.am
MMDevice/: DeviceBase.h  ImageMetadata.h  ImgBuffer.cpp  ImgBuffer.h  MMDevice.h  MMDeviceConstants.h  ModuleInterface.cpp  ModuleInterface.h  Property.cpp  Property.h
ModuleTest/: ModuleTest.vcproj
Test_AndorKinetic/: Test_AndorKinetic.vcproj
Test_Beanshell_Scripts/: propertyTests.bsh
Test_MMCore/: Test_MMCore.cpp  Test_MMCore.sln  Test_MMCore.vcproj
Test_MMCore_devkit/: Test_MMCore_devkit.cpp  (+1 more)
Tracking/: build.xml
plugins/: Makefile.am
plugins/Tracker/: build.xml
plugins/Tracker/src/: TrackerControlDlg.java
plugins/Tracker/src/com/imaging100x/tracker/: TrackerControl.java
scripts/: Makefile.am  mm_beanshell_startup.bsh  mm_inspector.bsh  mm_load_docs.bsh  mm_test_all.bsh  mm_test_camera.bsh  mm_test_shutter.bsh  mm_test_xystage.bsh
(+104 files in other folders)
