install:
	rm -rf $(IJPATH)/scripts || echo "no problem"
	mkdir $(IJPATH)/scripts
	cp AutoExpose.bsh $(IJPATH)/scripts/
	cp Init.bsh $(IJPATH)/scripts/
	cp camera_test.bsh $(IJPATH)/scripts/
	cp config_test.bsh $(IJPATH)/scripts/
	cp image_snap_example.bsh $(IJPATH)/scripts/
	cp image_snap_example_2.bsh $(IJPATH)/scripts/
	cp live_demo.bsh $(IJPATH)/scripts/
	cp manualAcq.bsh $(IJPATH)/scripts/
	cp mm_beanshell_startup.bsh $(IJPATH)/scripts/
	cp mm_load_docs.bsh $(IJPATH)/scripts/
	cp sdemo1.bsh $(IJPATH)/scripts/
	cp sdemo2.bsh $(IJPATH)/scripts/
	cp setZoom.bsh $(IJPATH)/scripts/

